--- a/backend/bakery/src/main/resources/application.properties
+++ b/backend/bakery/src/main/resources/application.properties
@@ -14,5 +14,5 @@ spring.main.banner-mode=off
 #Reduce logging level. Set logging level to warn.
 logging.level.root=warn
 
-#spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.EJB3NamingStrategy
+#Makes Hibernate don't change the names from CamelCase to Underscore.
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
